namespaces/live.cloud-platform.service.justice.gov.uk/laa-govuk-notifiy-orchestrator-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-govuk-notifiy-orchestrator-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-cla-dev"
    cloud-platform.justice.gov.uk/application: "LAA GOVUK Notify Orchestrator"
    cloud-platform.justice.gov.uk/owner: "CLA/FALA: civil-legal-advice@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa_govuk_notify_orchestrator"
    cloud-platform.justice.gov.uk/team-name: "laa-get-access"
    cloud-platform.justice.gov.uk/review-after: ""
